// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`<MobilePhoneVerification /> rendering with placeholder translation tags should render translation placeholder correctly 1`] = `
<div>
  <div
    class="container content"
    id="mobile-phone-verification"
  >
    <div
      class="inner"
    >
      <div
        class="main-column"
      >
        <div
          class="inner"
        >
          <form
            class=""
          >
            <div
              class="row fieldset code"
            >
              <p
                class="label"
              >
                PHONE_VERIFY ()
              </p>
              <div
                class="row"
              >
                <input
                  class="input "
                  id="code"
                  name="code"
                  pattern="^[0-9]{6}$"
                  placeholder="MOBILE_CODE_PHOLD"
                  required=""
                  title="MOBILE_CODE_TITL"
                  type="text"
                  value=""
                />
              </div>
              <button
                class="button full"
                type="submit"
              >
                MOBILE_PHONE_VERIFY
              </button>
            </div>
          </form>
          <div
            class="row fieldset resend"
          >
            <p
              class="label"
            >
              RESEND_TOKEN_LBL
            </p>
            <button
              class="button full"
              type="button"
            >
              RESEND_TOKEN
            </button>
          </div>
          <div
            class="row fieldset change"
          >
            <p
              class="label"
            >
              PHONE_CHANGE_LBL
            </p>
            <a
              class="button full"
              href="/default/change-phone-number"
            >
              PHONE_CHANGE_BTN
            </a>
          </div>
          <div
            class="row fieldset logout"
          >
            <p
              class="label"
            >
              LOGOUT_LBL
            </p>
            <button
              class="button full"
              type="button"
            >
              LOGOUT
            </button>
          </div>
        </div>
      </div>
      <div
        class="side-column contact"
      >
        <div
          class="inner"
        >
          <div
            class="row"
          >
            <span
              class="label"
            >
              EMAIL
              :
            </span>
            <a
              class="link"
              href="mailto:support.org"
            >
              support.org
            </a>
          </div>
          <div
            class="row"
          >
            <span
              class="label"
            >
              HELPDESK
              :
            </span>
            <a
              class="link"
              href="tel:+1234567890"
            >
              +1234567890
            </a>
          </div>
          <div
            class="contact-links"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Mobile Phone Token verification: standard flow should disable resend button if cooldown is present in CreatePhoneToken failure 1`] = `
<div>
  <div
    class="container content"
    id="mobile-phone-verification"
  >
    <div
      class="inner"
    >
      <div
        class="main-column"
      >
        <div
          class="inner"
        >
          <form
            class=""
          >
            <div
              class="row fieldset code"
            >
              <p
                class="label"
              >
                Verify your mobile phone number () by inserting the code you received via SMS below.
              </p>
              <div
                class="row"
              >
                <input
                  class="input "
                  id="code"
                  name="code"
                  pattern="^[0-9]{6}$"
                  placeholder="enter SMS verification code"
                  required=""
                  title="this field must be a 6 digit numeric code"
                  type="text"
                  value=""
                />
              </div>
              <button
                class="button full"
                type="submit"
              >
                Submit
              </button>
            </div>
          </form>
          <div
            class="row fieldset resend"
          >
            <p
              class="label"
            >
              If you did not receive the verification SMS code, you can try sending it again by clicking below.
            </p>
            <button
              class="button full"
              type="button"
            >
              Send a new verification code
            </button>
          </div>
          <div
            class="row fieldset change"
          >
            <p
              class="label"
            >
              Wrong phone number?
            </p>
            <a
              class="button full"
              href="/default/change-phone-number"
            >
              Change your phone number
            </a>
          </div>
          <div
            class="row fieldset logout"
          >
            <p
              class="label"
            >
              If you need to cancel the process you can log out below.
            </p>
            <button
              class="button full"
              type="button"
            >
              Logout
            </button>
          </div>
        </div>
      </div>
      <div
        class="side-column contact"
      >
        <div
          class="inner"
        >
          <div
            class="row"
          >
            <span
              class="label"
            >
              Email
              :
            </span>
            <a
              class="link"
              href="mailto:support.org"
            >
              support.org
            </a>
          </div>
          <div
            class="row"
          >
            <span
              class="label"
            >
              Helpdesk
              :
            </span>
            <a
              class="link"
              href="tel:+1234567890"
            >
              +1234567890
            </a>
          </div>
          <div
            class="contact-links"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Mobile Phone Token verification: standard flow should disable resend button if cooldown is present in CreatePhoneToken success 1`] = `
<div>
  <div
    class="container content"
    id="mobile-phone-verification"
  >
    <div
      class="inner"
    >
      <div
        class="main-column"
      >
        <div
          class="inner"
        >
          <form
            class=""
          >
            <div
              class="row fieldset code"
            >
              <p
                class="label"
              >
                Verify your mobile phone number (+393660011222) by inserting the code you received via SMS below.
              </p>
              <div
                class="row"
              >
                <input
                  class="input "
                  id="code"
                  name="code"
                  pattern="^[0-9]{6}$"
                  placeholder="enter SMS verification code"
                  required=""
                  title="this field must be a 6 digit numeric code"
                  type="text"
                  value=""
                />
              </div>
              <button
                class="button full"
                type="submit"
              >
                Submit
              </button>
            </div>
          </form>
          <div
            class="row fieldset resend"
          >
            <p
              class="label"
            >
              A new SMS can be requested in 30 seconds.
            </p>
            <button
              class="button full"
              disabled=""
              type="button"
            >
              Send a new verification code
            </button>
          </div>
          <div
            class="row fieldset change"
          >
            <p
              class="label"
            >
              Wrong phone number?
            </p>
            <a
              class="button full"
              href="/default/change-phone-number"
            >
              Change your phone number
            </a>
          </div>
          <div
            class="row fieldset logout"
          >
            <p
              class="label"
            >
              If you need to cancel the process you can log out below.
            </p>
            <button
              class="button full"
              type="button"
            >
              Logout
            </button>
          </div>
        </div>
      </div>
      <div
        class="side-column contact"
      >
        <div
          class="inner"
        >
          <div
            class="row"
          >
            <span
              class="label"
            >
              Email
              :
            </span>
            <a
              class="link"
              href="mailto:support.org"
            >
              support.org
            </a>
          </div>
          <div
            class="row"
          >
            <span
              class="label"
            >
              Helpdesk
              :
            </span>
            <a
              class="link"
              href="tel:+1234567890"
            >
              +1234567890
            </a>
          </div>
          <div
            class="contact-links"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Mobile Phone Token verification: standard flow should render successfully 1`] = `
<div>
  <div
    class="container content"
    id="mobile-phone-verification"
  >
    <div
      class="inner"
    >
      <div
        class="main-column"
      >
        <div
          class="inner"
        >
          <form
            class=""
          >
            <div
              class="row fieldset code"
            >
              <p
                class="label"
              >
                Verify your mobile phone number (+393660011222) by inserting the code you received via SMS below.
              </p>
              <div
                class="row"
              >
                <input
                  class="input "
                  id="code"
                  name="code"
                  pattern="^[0-9]{6}$"
                  placeholder="enter SMS verification code"
                  required=""
                  title="this field must be a 6 digit numeric code"
                  type="text"
                  value=""
                />
              </div>
              <button
                class="button full"
                type="submit"
              >
                Submit
              </button>
            </div>
          </form>
          <div
            class="row fieldset resend"
          >
            <p
              class="label"
            >
              If you did not receive the verification SMS code, you can try sending it again by clicking below.
            </p>
            <button
              class="button full"
              type="button"
            >
              Send a new verification code
            </button>
          </div>
          <div
            class="row fieldset change"
          >
            <p
              class="label"
            >
              Wrong phone number?
            </p>
            <a
              class="button full"
              href="/default/change-phone-number"
            >
              Change your phone number
            </a>
          </div>
          <div
            class="row fieldset logout"
          >
            <p
              class="label"
            >
              If you need to cancel the process you can log out below.
            </p>
            <button
              class="button full"
              type="button"
            >
              Logout
            </button>
          </div>
        </div>
      </div>
      <div
        class="side-column contact"
      >
        <div
          class="inner"
        >
          <div
            class="row"
          >
            <span
              class="label"
            >
              Email
              :
            </span>
            <a
              class="link"
              href="mailto:support.org"
            >
              support.org
            </a>
          </div>
          <div
            class="row"
          >
            <span
              class="label"
            >
              Helpdesk
              :
            </span>
            <a
              class="link"
              href="tel:+1234567890"
            >
              +1234567890
            </a>
          </div>
          <div
            class="contact-links"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
